# autonomousCarDesign

./: CMakeLists.txt  CMakePresets.json  README.md  prj.conf
app/: CMakeLists.txt  camera.cpp  control_loop.cpp  lidar.cpp  motors.cpp  vector2D.cpp
app/include/: camera.hpp  control_loop.hpp  detected_object.hpp  lidar.hpp  motors.hpp  obstacle.hpp  trackline.hpp  vector2D.hpp
src/: bluetooth.cpp  main.cpp
src/include/: bluetooth.hpp
tests/: CMakeLists.txt  ut_camera.cpp  ut_motors.cpp
